# Non-Linear-Optimization-Test

./: .gitignore  CMakeLists.txt  README.md
include/: NLSSolver.hpp
scripts/: CurveFitting_data.txt  DogLeg.txt  LM.txt  draw.py
src/: NLSSolver.cpp
test/: curveFitting.cpp
